# RVC3-python

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.torch.cpu  Dockerfile.torch.gpu
notebooks/: chap3.ipynb
