[project]
name = "rvc3python"
version = "0.9.2"
authors = [{ name = "Peter Corke", email = "rvc@petercorke.com" }]
description = "Support for book: Robotics, Vision & Control 3 in Python"
readme = "README.md"
requires-python = ">=3.10, < 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "robotics",
    "robot",
    "manipulator",
    "robot arm",
    "mobile robot",
    "mobile manipulation",
    "path planning",
    "SLAM",
    "pose graph",
    "Dubins",
    "Reeds-Shepp",
    "lattice planner",
    "RRT",
    "PRM",
    "rapidly exploring random tree",
    "probabilistic roadmap planner",
    "force control",
    "kinematics",
    "Jacobian",
    "position control",
    "velocity control",
    "spatial math",
    "SO(2)",
    "SE(2)",
    "SO(3)",
    "SE(3)",
    "twist",
    "product of exponential",
    "translation",
    "orientation",
    "angle-axis",
    "Lie group",
    "skew symmetric matrix",
    "pose",
    "translation",
    "rotation matrix",
    "rigid body transform",
    "homogeneous transformation",
    "Euler angles",
    "roll-pitch-yaw angles",
    "quaternion",
    "unit-quaternion",
    "computer vision",
    "machine vision",
    "robotic vision",
    "color space",
    "blackbody",
    "image segmentation",
    "blobs",
    "Hough transform",
    "k-means",
    "homography",
    "camera calibration",
    "visual odometry",
    "bundle adjustment",
    "stereo vision",
    "rectification",
]

dependencies = [
    "matplotlib",
    "numpy < 2", # OpenCV and SpatialGeom don't like numpy 2
    "roboticstoolbox-python >= 1",
    "machinevision-toolbox-python",
    "bdsim >= 1.1",
    "IPython",
    "sympy",
    "pybullet",
    "ipympl>=0.9.7",
]

[project.urls]
"Homepage" = "https://github.com/pantelis/RVC3-python"
"Bug Tracker" = "https://github.com/pantelis/RVC3-python/issues"
"Source" = "https://github.com/pantelis/RVC3-python"


[project.scripts]
rvctool = "RVC3.bin.rvctool:main"
bdsim_path = "RVC3.bin.bdsim_path:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["RVC3"]

[tool.hatch.build.targets.wheel.force-include]
"RVC3/models" = "RVC3/models"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=6.0",
    "pytest-cov",
    "ipykernel",
    "ruff",
    "mypy",
    "pre-commit",
    "hatchling",
]
